--- a/Autenticacion1718G2/.travis.yml
+++ b/Autenticacion1718G2/.travis.yml
@@ -1,11 +1,9 @@
 language: python
 python:
-    - “2.7”
-before_install:
-
+    - "2.7"
 install:
     - "pip install -r requirements.txt"
 script:
-    - "python manage.py makemigrations principal”
-    - "python manage.py migrate”
-    - "python manage.py runserver”
+    - "python manage.py makemigrations principal"
+    - "python manage.py migrate"
+    - "python manage.py runserver"
