--- a/Autenticacion1718G2/.travis.yml
+++ b/Autenticacion1718G2/.travis.yml
@@ -4,6 +4,4 @@ python:
 install:
     - "pip install -r requirements.txt"
 script:
-    - "python manage.py makemigrations principal"
-    - "python manage.py migrate"
-    - "python manage.py runserver"
+    - "python manage.py test"
